[metadata]
name = rushstack
version = 2013072501
summary = TDAF Services RUSH
description-file =
    README.rst
author = Lab SW PDI-HP
author-email = francisco.mayoral@hp.com
home-page = https://pdihub.hi.inet/fms25/rushstack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    rushstack
scripts =
    bin/rushstack-api
    bin/rushstack-db-setup
    bin/rushstack-engine
    bin/rushstack-keystone-setup
    bin/rushstack-manage

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = rushstack/locale
domain = rushstack

[update_catalog]
domain = rushstack
output_dir = rushstack/locale
input_file = rushstack/locale/heat.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = rushstack/locale/rushstack.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
